--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -1,5 +1,7 @@
 <div class='cover_page'>
-	<div class="cover_photo"></div>
+	<div class="cover_photo">
+		<%= image_tag "cover.jpg" %>
+	</div>
 	<div class="survey_title">
 		尋找您的吉他聲音
 	</div>
