--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,23 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
  *= require_self
+ *= require_tree .
  */
+
+
+* {
+	line-height: 26px;
+	margin: 0;
+	padding: 0;
+	text-align: left;
+}
+
+html, body {
+	height: 100%;
+	font-family: 'Crete Round', 'Helvetica Neue', 'sans serif';
+}
+
+ul, li {
+	list-style-type: none;
+}
