--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -6,9 +6,10 @@
 		尋找您的吉他聲音
 	</div>
 	<div class="description">
-		<p>『最近想買一把吉他但是又不知道該從何下手．．．』</p>
-		<p>『聽說木頭的材質會影響到彈奏的音色．．．』</p>
-		<p>『什麼樣的衣服配什麼樣的人穿．．．吉他的音色也是一樣的道理．．．』</p>
+		<p>『最近想買一把吉他...』</p>
+		<p>『聽說木頭的材質會影響到彈奏的音色』</p>
+		<p>『什麼樣的衣服配什麼樣的人穿』 </p>
+		<p>『那...吉他的音色呢？』</p>
 	</div>
 </div>
 <div class="container">
