Change answer's font-size to 16px when small device

--- a/app/assets/stylesheets/survey.scss
+++ b/app/assets/stylesheets/survey.scss
@@ -401,11 +401,8 @@
 	.cover_page {
 		min-height: 800px;
 	}
-
-	span {
-		font-size: 16px;
-	}
-	.description > p {
+	
+	span, .description > p, .answer,  {
 		font-size: 16px;
 	}
 	.footer {
