Set result graph a max width And Put Line contact

--- a/app/views/survey/index.html.erb
+++ b/app/views/survey/index.html.erb
@@ -201,7 +201,7 @@
 	<div class="inform">
 		<div class="contact">
 			<div class="line">
-				<a href="">
+				<a href="http://line.me/ti/p/%40gay6872z">
 				<%= image_tag "LINE_icon01.png" %>
 				</a>
 			</div>
